# slime-mould

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-backend-oci.yml  deploy-frontend-pages.yml
benchmark/data/: puzzles.cbor  raw.json  splits.json
benchmark/scripts/: make_splits.py  parse_to_cbor.py
configs/: default.toml
configs/ablations/: aco-vanilla.toml  backtracking.toml  heuristic-only.toml  random.toml  zipmould-strat-positive.toml  zipmould-strat-signed.toml  zipmould-uni-positive.toml  zipmould-uni-signed.toml
configs/tuned/: zipmould-strat-positive.toml  zipmould-strat-signed.toml  zipmould-uni-positive.toml  zipmould-uni-signed.toml
deploy/oci/: Caddyfile.template  deploy.sh  setup-vm.sh  sync-cloudflare-ufw.sh  zipmould-deploy.sudoers  zipmould-viz.env.example  zipmould-viz.service
docs/: design.md  oci-deploy.md
docs/superpowers/findings/: 2026-04-25-stage2-stage4-results.md
docs/superpowers/plans/: 2026-04-24-zipmould-python-implementation.md  2026-04-25-stage4-extended-evidence.md  2026-04-25-zipmould-stage2-stage4.md  2026-04-26-solver-visualizer.md
docs/superpowers/specs/: 2026-04-24-zipmould-python-implementation-design.md  2026-04-25-zipmould-stage2-stage4-design.md  2026-04-26-solver-visualizer-design.md
experiments/: __init__.py
experiments/stage1/: __init__.py  analyze.py  manifest.toml  run.py
experiments/stage2/: __init__.py  analyze.py  dev_gate.py  manifest.toml  objective.py  search_space.py  tune.py
experiments/stage4/: __init__.py  analyze.py  analyze_extended.py  manifest.toml  run.py
presentations/: .li.tmp.txt  README.md  build-pdf.sh  zipmould.html  zipmould.md
src/enums/: directions.py
src/models/: cell.py  grid.py  path.py  wall.py
src/util/: cache.py
src/zipmould/: __init__.py  __main__.py  cli.py  config.py  feasibility.py  fitness.py  logging_config.py  metrics.py  puzzle.py  rng.py
src/zipmould/baselines/: __init__.py  (+4 more)
tests/: test_solver_state.py
tests/viz/: conftest.py  test_cache.py  test_cli.py  test_routes_errors.py  test_routes_health.py  test_routes_puzzles.py  test_routes_runs.py  test_routes_traces.py  test_routes_variants.py  test_runner.py  test_schemas.py  test_trace_codec.py
viz-web/: .env.production  .env.production.example  README.md  env.d.ts  index.html  package.json  playwright.config.ts  vite.config.ts
viz-web/public/: CNAME
viz-web/src/: App.vue  main.ts
(+141 files in other folders)
