[project]
name = "slime-mould"
version = "0.0.1"
description = "Slime Mould Algorithm for solving Zip puzzles"
requires-python = ">=3.11"
dependencies = [
    "cbor2>=5.6",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"benchmark/scripts/*.py" = ["T201"]
