[project]
name = "zipmould"
version = "0.1.0"
description = "ZipMould — a Li-inspired Slime Mould Algorithm for Zip puzzles"
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "cbor2>=5.9,<6",
    "numpy>=2.4,<3",
    "numba>=0.65,<0.66",
    "pydantic>=2.13,<3",
    "polars>=1.40,<2",
    "joblib>=1.5,<2",
    "typer>=0.15,<1",
    "tqdm>=4.67,<5",
    "loguru>=0.7.3,<0.8",
    "optuna>=4.0,<5",
]

[project.optional-dependencies]
viz = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-multipart>=0.0.20,<1",
]

[project.scripts]
zipmould = "zipmould.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.8,<0.9",
    "ty>=0.0.32",
    "pyright>=1.1.390,<2",
    "bandit>=1.8,<2",
    "py-spy>=0.4,<1",
    "scalene>=1.5,<2",
    "pytest>=8.3,<9",
    "hypothesis>=6.115,<7",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zipmould"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "benchmark", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "PL", "RUF", "PERF", "ANN", "S", "T"]
ignore = [
    "PLR0913",
    "ANN401",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"benchmark/scripts/*.py" = ["T201"]
"experiments/**/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.13"

[tool.pyright]
pythonVersion = "3.13"
include = ["src/zipmould", "benchmark/scripts", "experiments"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"

[tool.bandit]
exclude_dirs = [".venv", "tests", "experiments"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
